# pii-anonymizer-cli

./: .gitignore  README.md  pyproject.toml  sample_data.txt
pii_anonymizer/: __init__.py  anonymizer.py  cli.py
tests/: test_anonymizer.py
