[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pii_anonymizer"
version = "0.1.0"
description = "CLI tool for anonymizing PII in text files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "presidio-analyzer>=2.2.33",
    "presidio-anonymizer>=2.2.33",
    "spacy>=3.5.0",
    "pytest>=7.0.0",
]

[project.scripts]
anonymize = "pii_anonymizer.cli:main"

[tool.pytest]
testpaths = ["tests"]
